<resources>
    <string name="app_name">SuspendedBall</string>
    <string name="exit">exit</string>
    <string name="open">open suspendedball</string>
    <string name="auto">auto start</string>
    <string name="person">personalize</string>
    <string name="size">size</string>
    <string name="color">color</string>
    <string name="other">others</string>
    <string name="develop">developer:</string>
    <string name="developer">crazyStrome</string>
    <string name="git">github:</string>
    <string name="gitname">https://github.com/crazyStrome</string>
    <string name="base">base</string>
    <string name="accessibility">open suspendedBall function</string>
    <string name="donotkill">please join white lists</string>
    <string name="top">please allow to appear at the top level</string>
    <string name="create">please open the suspended ball</string>
    <string name="active">active and you can lock the screen</string>
    <string name="active_complete">active success</string>
    <string name="active_fail">active failed,you can active it in the menu</string>
    <string name="acvite_menu">device manager</string>
    <string name="root_menu">root permission</string>
    <string name="introduce">introduce</string>
    <string name="accessibility_menu">accessibility function</string>
    <string name="accessibilitySuccess">open function success</string>
    <string name="accessibilityFail">open function failed,you can open it in the menu</string>
    <string name="overlaySuccess">overlay permission got</string>
    <string name="overlayFail">overlay permission failed,you can open it in the menu</string>
    <string name="overlay">overlay permission</string>
    <string name="isRoot">your device is rooted</string>
    <string name="notRoot">your device is not rooted</string>
    <string name="share">share</string>
    <string name="shareText">picture</string>
    <string name="shareSuccess">share succeed</string>
    <string name="shareFail">share failed</string>
    <string name="alpha">alpha</string>
    <string name="banner_ad_unit_id">ca-app-pub-1103366534239838/8603937701</string>
</resources>
