<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:background="@color/back">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:background="@color/colorAccent"
            app:layout_collapseMode="pin"
            android:id="@+id/toolbar"
            app:title="@string/app_name"
            app:titleTextColor="@android:color/white"
            app:layout_scrollFlags="scroll|enterAlways"
            android:elevation="11dp">
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cardview_light_background"
                android:layout_marginTop="10dp"
                android:stateListAnimator="@animator/anim"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground" >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/base"
                        android:textColor="#18ffff"
                        style="@style/textStyle"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="20dp"
                        android:id="@+id/base"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/open"
                        style="@style/textStyle"
                        android:layout_marginStart="20dp"
                        android:layout_below="@id/base"
                        android:layout_marginTop="10dp"
                        android:id="@+id/text_open"/>
                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@id/text_open"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="20dp"
                        android:id="@+id/switch_openball"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/text_open"
                        android:layout_marginTop="10dp"
                        android:text="@string/donotkill"
                        style="@style/textStyle"
                        android:id="@+id/auto"
                        android:layout_marginStart="20dp"
                        android:layout_marginBottom="20dp"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cardview_light_background"
                android:layout_marginTop="10dp"
                android:stateListAnimator="@animator/anim"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground" >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/person"
                        android:textColor="#18ffff"
                        style="@style/textStyle"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="20dp"
                        android:id="@+id/personalize"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/size"
                        style="@style/textStyle"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:id="@+id/text_size"
                        android:layout_below="@id/personalize"/>
                    <SeekBar
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/text_size"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:max="200"
                        android:layout_marginTop="5dp"
                        android:id="@+id/seekbar"
                        android:progress="50"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/alpha"
                        style="@style/textStyle"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:id="@+id/alpha"
                        android:layout_below="@id/seekbar"/>
                    <SeekBar
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/alpha"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:max="200"
                        android:layout_marginTop="5dp"
                        android:id="@+id/seekbar_alpha"
                        android:progress="100"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/color"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="20dp"
                        android:id="@+id/color"
                        android:layout_below="@id/seekbar_alpha"
                        style="@style/textStyle"/>
                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/color"
                        android:scrollbars="none"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="20dp">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:orientation="horizontal"
                            android:layout_marginTop="10dp"
                            android:gravity="center_vertical">
                            <ImageButton
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:background="@color/reset"
                                android:layout_marginStart="20dp"
                                android:id="@+id/button1"
                                android:contentDescription="@string/app_name"/>
                            <ImageButton
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:background="@color/reset1"
                                android:layout_marginStart="20dp"
                                android:id="@+id/button2"
                                android:contentDescription="@string/app_name"/>
                            <ImageButton
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:background="@color/reset2"
                                android:layout_marginStart="20dp"
                                android:id="@+id/button3"
                                android:contentDescription="@string/app_name"/>
                            <ImageButton
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:background="@color/reset3"
                                android:layout_marginStart="20dp"
                                android:id="@+id/button4"
                                android:contentDescription="@string/app_name"/>
                            <ImageButton
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:background="@color/reset4"
                                android:layout_marginStart="20dp"
                                android:id="@+id/button5"
                                android:contentDescription="@string/app_name"/>
                            <ImageButton
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:background="@color/reset5"
                                android:layout_marginStart="20dp"
                                android:id="@+id/button6"
                                android:contentDescription="@string/app_name"/>
                            <ImageButton
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:background="@color/reset6"
                                android:layout_marginStart="20dp"
                                android:id="@+id/button7"
                                android:contentDescription="@string/app_name"/>
                            <ImageButton
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:background="@color/reset7"
                                android:layout_marginStart="20dp"
                                android:id="@+id/button8"
                                android:contentDescription="@string/app_name"/>
                            <ImageButton
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:background="@color/reset8"
                                android:layout_marginStart="20dp"
                                android:id="@+id/button9"
                                android:contentDescription="@string/app_name"/>
                            <ImageButton
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:background="@color/reset9"
                                android:layout_marginLeft="20dp"
                                android:layout_marginRight="20dp"
                                android:id="@+id/button10"
                                android:contentDescription="@string/app_name"/>
                        </LinearLayout>
                    </HorizontalScrollView>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cardview_light_background"
                android:layout_marginTop="10dp"
                android:stateListAnimator="@animator/anim"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground" >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/other"
                        android:textColor="#18ffff"
                        style="@style/textStyle"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="20dp"
                        android:id="@+id/other"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/develop"
                        android:id="@+id/develop"
                        android:layout_below="@id/other"
                        android:layout_marginStart="20dp"
                        style="@style/textStyle"
                        android:layout_marginTop="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/developer"
                        style="@style/textStyle"
                        android:layout_alignTop="@id/develop"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="20dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/git"
                        style="@style/textStyle"
                        android:layout_below="@id/develop"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:id="@+id/git"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_below="@id/git"
                        android:text="@string/gitname"
                        android:layout_marginEnd="20dp"
                        style="@style/textStyle"
                        android:autoLink="web"
                        android:id="@+id/gitname"/>

                    <com.google.android.gms.ads.AdView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@+id/git"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="12dp"
                        android:id="@+id/adView"
                        android:layout_below="@id/gitname"
                        android:layout_marginBottom="20dp"
                        ads:adSize="BANNER"
                        ads:adUnitId="@string/banner_ad_unit_id"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
